# Garden-Bot

./: README.md  dockerfile  install_dependencies.sh  ros2_setup.sh  setup-wo-docker.sh  setup.sh
gazebo/launch/: gazebo.launch
gazebo/worlds/: testing.world
install/: local_setup.sh  setup.sh
install/package1/share/ament_index/resource_index/package_run_dependencies/: package1
install/package1/share/ament_index/resource_index/parent_prefix_path/: package1
install/package1/share/package1/: local_setup.sh  package.sh  package.xml
install/package1/share/package1/cmake/: ament_cmake_export_dependencies-extras.cmake  package1Config.cmake
install/package1/share/package1/launch/: gazebo.py  gazebo_launch.py
launch/: gazebo_launch.py
src/package1/: CMakeLists.txt  package.xml
src/package1/config/: bridge_config.yaml
src/package1/launch/: gazebo_launch.launch.py  real_drone.launch
src/package1/src/: mavlink_node.cpp
src/package1/worlds/: model.config  model.sdf  testing.world
