<?xml version="1.0"?>
<package format="3">
  <name>package1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michael@tiefighterconsulting.com">Mathus</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../"/>
    <gazebo_ros gazebo_media_path="${prefix}/media"/>
    <gazebo_ros plugin_path="${prefix}/plugins"/>
  </export>
</package>
